--- a/tex/modules/7-P/sections/3.tex
+++ b/tex/modules/7-P/sections/3.tex
@@ -15,9 +15,12 @@
 \end{tikzpicture}
 \end{center}
 }
-\newcommand{\trussCompletion}{%
+\newcommand{\trussNormalForces}{%
 \draw [thick, blue,->] (0,0) -- (0.5,0.5);
 \draw [thick, blue,->] (4,0) -- (3.5,0.5);
+}
+\newcommand{\trussCompletion}{%
+\trussNormalForces
 \draw [thick, magenta,<->] (0.4,0.684) -- (0.6,1.026);
 \draw [thick, magenta,<->] (3.4,1.026) -- (3.6,0.684);
 \draw [thick, magenta,<->] (1.8,1.71) -- (2.2,1.71);
@@ -31,6 +34,15 @@
 \draw [thick, magenta,->] (0,0) -- (0.4,0.684);
 \draw [thick, magenta,->] (0,0) -- (0.5,0);
 }
+\newcommand{\trussStrutVariables}{%
+\node[above] at (2,1.71) {\(x_1\)};
+\node[left] at (0.5,0.866) {\(x_2\)};
+\node[left] at (1.5,0.866) {\(x_3\)};
+\node[right] at (2.5,0.866) {\(x_4\)};
+\node[right] at (3.5,0.866) {\(x_5\)};
+\node[below] at (1,0) {\(x_6\)};
+\node[below] at (3,0) {\(x_7\)};
+}
 
 \begin{applicationActivities}
 
@@ -43,7 +55,7 @@ of material called \term{struts}, assembled to behave as a single object.
 \end{center}
 \end{example}
 
-\begin{activity}{10}
+\begin{activity}{5}
 Consider the representation of a simple truss pictured below.
 All of the seven struts are of equal length, affixed to two anchor points
 applying a normal force to nodes \(C\) and \(E\), and
@@ -128,6 +140,30 @@ E: \vec F_{EB}+\vec F_{ED}+\vec N_E=\vec 0
 \]
 \end{remark}
 
+%\begin{activity}{5}
+%An augmented matrix representing these five equations would have how many rows?
+%\[
+%A: \vec F_{AC}+\vec F_{AD}+\vec F_{AB}=\vec 0
+%\]
+%\[
+%B: \vec F_{BC}+\vec F_{BD}+\vec F_{BE}=\vec 0
+%\]
+%\[
+%C: \vec F_{CA}+\vec F_{CD}+\vec N_C=\vec 0
+%\]
+%\[
+%D: \vec F_{DC}+\vec F_{DA}+\vec F_{DB} +\vec F_{DE}+\vec L=\vec 0
+%\]
+%\[
+%E: \vec F_{EB}+\vec F_{ED}+\vec N_E=\vec 0
+%\]
+%\begin{enumerate}[a)]
+%\item 5
+%\item 10
+%\item 25
+%\end{enumerate}
+%\end{activity}
+
 \begin{observation}
 \drawtruss{}
 
@@ -171,7 +207,7 @@ how many variables will be required?
 Since the angles for each strut are known,
 one variable may be used to represent each.
 
-\drawtruss{}
+\drawtruss{\trussStrutVariables}
 
 For example:
 
@@ -191,13 +227,12 @@ For example:
 Since the angle of the normal forces for each anchor point are unknown,
 two variables may be used to represent each.
 
-\drawtruss{}
+\drawtruss{\trussNormalForces}
 
 \[
 \vec N_C=\begin{bmatrix}y_1\\y_2\end{bmatrix}
-\]
-\[
-\vec N_D=\begin{bmatrix}y_3\\y_4\end{bmatrix}
+\hspace{3em}
+\vec N_D=\begin{bmatrix}z_1\\z_2\end{bmatrix}
 \]
 
 The load vector is constant.
@@ -209,40 +244,67 @@ The load vector is constant.
 \end{observation}
 
 \begin{remark}
-Using the approximation \(\sqrt{3}/2\approx 0.866\), each of the five vector
-equations found previously may be rewritten as two linear equations:
+Each of the five vector
+equations found previously represent two linear equations:
 one for the horizontal component and one for the vertical.
 
-\drawtruss{}
+\drawtruss{\trussStrutVariables}
 
 \[
 C: \vec F_{CA}+\vec F_{CD}+\vec N_C=\vec 0
 \]
-\begin{alignat*}{5}
-0.5x_2   &+& 1x_6 &+& y_1 &&      &=& 0\\
-0.866x_2 &&       &&      &+& y_2 &=& 0
-\end{alignat*}
+\[
+\Leftrightarrow
+x_2\begin{bmatrix}\cos(60^\circ)\\\sin(60^\circ)\end{bmatrix}+
+x_6\begin{bmatrix}\cos(0^\circ)\\\sin(0^\circ)\end{bmatrix}+
+\begin{bmatrix}y_1\\y_2\end{bmatrix}=\begin{bmatrix}0\\0\end{bmatrix}
+\]
+Using the approximation \(\sqrt{3}/2\approx 0.866\), we have
+\[
+\Leftrightarrow
+x_2\begin{bmatrix}0.5\\0.866\end{bmatrix}+
+x_6\begin{bmatrix}1\\0\end{bmatrix}+
+y_1\begin{bmatrix}1\\0\end{bmatrix}+
+y_2\begin{bmatrix}0\\1\end{bmatrix}=
+\begin{bmatrix}0\\0\end{bmatrix}
+\]
 \end{remark}
 
 \begin{activity}{10}
-Using the approximation \(\sqrt{3}/2\approx 0.866\),
-write two linear equations that represent the forces at node \(D\),
-where the magnitude of compression/tension on strut \(AD\) is \(x_3\),
-\(BD\) is \(x_4\), \(CD\) is \(x_6\), and \(DE\) is \(x_7\).
+Expand the vector equation given below using sine and cosine of appropriate angles,
+then compute each component (approximating \(\sqrt{3}/2\approx 0.866\)).
 
-\drawtruss{}
+\drawtruss{\trussStrutVariables}
 
 \[
 D:\vec F_{DA}+\vec F_{DB}+\vec F_{DC}+\vec F_{DE}=-\vec L
+\]
+\[
+\Leftrightarrow
+x_3\begin{bmatrix}\cos(\unknown)\\\sin(\unknown)\end{bmatrix}+
+x_4\begin{bmatrix}\cos(\unknown)\\\sin(\unknown)\end{bmatrix}+
+x_6\begin{bmatrix}\cos(\unknown)\\\sin(\unknown)\end{bmatrix}+
+x_7\begin{bmatrix}\cos(\unknown)\\\sin(\unknown)\end{bmatrix}=
+\begin{bmatrix}\unknown\\\unknown\end{bmatrix}
+\]
+\[
+\Leftrightarrow
+x_3\begin{bmatrix}\unknown\\\unknown\end{bmatrix}+
+x_4\begin{bmatrix}\unknown\\\unknown\end{bmatrix}+
+x_6\begin{bmatrix}\unknown\\\unknown\end{bmatrix}+
+x_7\begin{bmatrix}\unknown\\\unknown\end{bmatrix}=
+\begin{bmatrix}\unknown\\\unknown\end{bmatrix}
 \]
 
 \end{activity}
 
 \begin{observation}
 The full augmented matrix given by the ten equations in this linear system
-is given below, where the columns correspond to \(x_1,\dots,x_7,y_1,\dots,y_4\).
+is given below, where the elevent columns correspond to \(x_1,\dots,x_7,y_1,y_2,z_1,z_2\),
+and the ten rows correspond to the horizontal and vertical components of the
+forces acting at \(A,\dots,E\).
 
-\drawtruss{}
+%\drawtruss[0.7]{\trussStrutVariables}
 
 \[
 \begin{bmatrix}[ccccccccccc|c]
@@ -252,23 +314,49 @@ is given below, where the columns correspond to \(x_1,\dots,x_7,y_1,\dots,y_4\).
 0&0&0&-0.866&-0.866&0&0&0&0&0&0&0\\
 0&0.5&0&0&0&1&0&1&0&0&0&0\\
 0&0.866&0&0&0&0&0&0&1&0&0&0\\
+0&0&-0.5&0.5&0&-1&1&0&0&0&0&0\\
+0&0&0.866&0.866&0&0&0&0&0&0&0&10000\\
+0&0&0&0&-0.5&0&-1&0&0&1&0&0\\
+0&0&0&0&0.866&0&0&0&0&0&1&0\\
 \end{bmatrix}
 \]
 \end{observation}
 
 \begin{observation}
-\drawtruss[0.8]{\trussCompletion}
-The determined part of the solution is
+This matrix row-reduces to the following.
+
+%\drawtruss[0.7]{\trussStrutVariables}
+
+\[\sim
+\begin{bmatrix}[ccccccccccc|c]
+1&0&0&0&0&0&0&0&0&0&0&-5773.7\\
+0&1&0&0&0&0&0&0&0&0&0&-5773.7\\
+0&0&1&0&0&0&0&0&0&0&0&5773.7\\
+0&0&0&1&0&0&0&0&0&0&0&5773.7\\
+0&0&0&0&1&0&0&0&0&0&0&-5773.7\\
+0&0&0&0&0&1&0&0&0&-1&0&2886.8\\
+0&0&0&0&0&0&1&0&0&-1&0&2886.8\\
+0&0&0&0&0&0&0&1&0&1&0&0\\
+0&0&0&0&0&0&0&0&1&0&0&5000\\
+0&0&0&0&0&0&0&0&0&0&1&5000\\
+\end{bmatrix}
+\]
+\end{observation}
+\begin{observation}
+\drawtruss{\trussCompletion}
+
+Thus we know the truss must satisfy the following conditions.
 \begin{align*}
-N_{1,v}=N_{2,v}&=5000 \\
-F_1=F_4=F_7&=-5882.4 \\
-F_3=F_5&=5882.4
+x_1=x_2=x_5&=-5882.4 \\
+x_3=x_4&=5882.4\\
+x_6=x_7&=2886.8+z_1\\
+y_1&=-z_1\\
+y_2=z_2&=5000 \\
 \end{align*}
+In particular, the negative \(x_1,x_2,x_5\) represent tension (forces pointing into the nodes),
+and the postive \(x_3,x_4\) represent compression (forces pointing out of the nodes).
+The vertical normal forces \(y_2+z_2\) counteract the \(10000\) load.
 
-So struts 1,4,7 are always in tension, while struts 3 and 5 are 
-always compressed.
-
-The forces on struts 2 and 6 (and the horizontal normal forces) are not strictly determined in this setting.
 \end{observation}
 
 
