short cryptography section

--- a/tex/modules/7-P/index.tex
+++ b/tex/modules/7-P/index.tex
@@ -4,5 +4,6 @@
 \input{modules/7-P/sections/1.tex}
 \input{modules/7-P/sections/2.tex}
 \input{modules/7-P/sections/3.tex}
+\input{modules/7-P/sections/4.tex}
 
 \end{module}
