--- a/tex/modules/7-P/sections/3.tex
+++ b/tex/modules/7-P/sections/3.tex
@@ -127,7 +127,7 @@ The five vector equations may be written as follows.
 A: \vec F_{AC}+\vec F_{AD}+\vec F_{AB}=\vec 0
 \]
 \[
-B: \vec F_{BC}+\vec F_{BD}+\vec F_{BE}=\vec 0
+B: \vec F_{BA}+\vec F_{BD}+\vec F_{BE}=\vec 0
 \]
 \[
 C: \vec F_{CA}+\vec F_{CD}+\vec N_C=\vec 0
@@ -167,9 +167,9 @@ E: \vec F_{EB}+\vec F_{ED}+\vec N_E=\vec 0
 \begin{observation}
 \drawtruss{}
 
-Each vector may be treated as an \(\IR^2\) vector by
-decomposing its magnitude into vertical and horizontal components.
-Note that \(\vec F_{CA}\) must have the same magnitude (and opposite
+Each vector has a vertical and horizontal component,
+so it may be treated as a vector in \(\IR^2\).
+Note that \(\vec F_{CA}\) must have the same magnitude (but opposite
 direction) as \(\vec F_{AC}\).
 
 \[
@@ -190,15 +190,17 @@ direction) as \(\vec F_{AC}\).
 \end{observation}
 
 \begin{activity}{5}
-To write a linear system that models the truss under consideration,
+To write a linear system that models the truss under consideration
+with constant load \(10000\) newtons,
 how many variables will be required?
 
 \drawtruss{}
 
 \begin{enumerate}[a)]
 \item \(7\): \(5\) from the nodes, \(2\) from the anchors
-\item \(10\): \(7\) from the struts, \(2\) from the anchors, \(1\) from the load
+\item \(9\): \(7\) from the struts, \(2\) from the anchors
 \item \(11\): \(7\) from the struts, \(4\) from the anchors
+\item \(12\): \(7\) from the struts, \(4\) from the anchors, \(1\) from the load
 \item \(13\): \(5\) from the nodes, \(7\) from the struts, \(1\) from the load
 \end{enumerate}
 \end{activity}
