--- a/tex/modules/7-P/sections/1.tex
+++ b/tex/modules/7-P/sections/1.tex
@@ -6,7 +6,7 @@ In geology, a \term{phase} is any physically separable material in the system, s
 
 \vspace{1em}
 
-A \term{component} is a chemical compound necessary to make up the phases; for historical reasons thise are usually oxides such as Calcium Oxide (${\rm CaO}$) or Silicone Dioxide (${\rm SiO_2}$).
+A \term{component} is a chemical compound necessary to make up the phases; for historical reasons these are usually oxides such as Calcium Oxide (${\rm CaO}$) or Silicone Dioxide (${\rm SiO_2}$).
 
 \vspace{1em}
 
