fix typo and make

--- a/tex/modules/7-P/sections/4.tex
+++ b/tex/modules/7-P/sections/4.tex
@@ -48,7 +48,9 @@ match the most common letters used in this message: \texttt{F,U}.
 This suggests the following partial decryption:
 \begin{center}\texttt{-ET- -HE-T -- THE TE-T}\end{center}
 
-By considering the context, or perhaps by an analysis of other messages
+By considering the context, or the fact that all letters
+were shifted the same amount, 
+or perhaps by an analysis of other messages
 sent using the same code, the completed message may be revealed:
 \begin{center}\texttt{LETS CHEAT ON THE TEST}\end{center}
 \end{observation}
@@ -136,7 +138,7 @@ using the encoding matrix \(A=\begin{bmatrix}3&-2&-3\\-2&3&0\\-1&0&2\end{bmatrix
 \equiv
 \begin{bmatrix}18&1\\17&23&\dots\\2&23\end{bmatrix}
 \equiv
-\text{\texttt{RPB AVV ESK ILY JYF UUK}}
+\text{\texttt{RPB AWW ESK ILY JYF UUI}}
 \]
 \end{activity}
 
@@ -144,7 +146,7 @@ using the encoding matrix \(A=\begin{bmatrix}3&-2&-3\\-2&3&0\\-1&0&2\end{bmatrix
 Reverse this process by using the decoding matrix,
 \(A^{-1}=\begin{bmatrix}6&4&9\\4&3&6\\3&2&5\end{bmatrix}\).
 \[
-\text{\texttt{RPB AVV ESK ILY JYF UUK}}
+\text{\texttt{RPB AWW ESK ILY JYF UUI}}
 \equiv
 \begin{bmatrix}18&1\\17&23&\dots\\2&23\end{bmatrix}
 \]
