--- a/tex/modules/6-G/exercises/G2.tex
+++ b/tex/modules/6-G/exercises/G2.tex
@@ -20,24 +20,24 @@ Compute the determinant of the matrix $\begin{bmatrix} 1 & 3 & 0 & -1 \\ 0 & 1 &
 
 
 \begin{problem}{G2}
-Compute the determinant of the matrix $\begin{bmatrix} 2 & 3 & 0 & 1 \\ -1 & 3 & 1 & 4 \\ 0 & 2 & 0 & 3 \\ 1 & -1 & 3 & 5 \end{bmatrix}$.
+Compute the determinant of the matrix \(\begin{bmatrix} 2 & 3 & 0 & 1 \\ -1 & 3 & 1 & 4 \\ 0 & 2 & 0 & 3 \\ 1 & -1 & 3 & 5 \end{bmatrix}\).
 \end{problem}
 \begin{solution}
-$-60$.
+\(-60\).
 \end{solution}
 
 \begin{problem}{G2}
-Compute the determinant of the matrix $\begin{bmatrix} 3 & -1 & 0  & 7 \\ 2 & 1 & 1 & -1  \\ 0 & 1 & 1 & 3 \\ 0 & 0 & 0 & 1   \end{bmatrix}$.
+Compute the determinant of the matrix \(\begin{bmatrix} 3 & -1 & 0  & 7 \\ 2 & 1 & 1 & -1  \\ 0 & 1 & 1 & 3 \\ 3 & 0 & 0 & 1   \end{bmatrix}\).
 \end{problem}
 \begin{solution}
-$2$
+\(2\).
 \end{solution}
 
 \begin{problem}{G2}
-Compute the determinant of the matrix $\begin{bmatrix} 8 & 5 & 3 & 0 \\ 3 & 2 & 1 & 1 \\ 5 & -3 & 1 & -2 \\ -1 & 2 & 0 & 1\end{bmatrix} $.
+Compute the determinant of the matrix \(\begin{bmatrix} 8 & 5 & 3 & 0 \\ 3 & 2 & 1 & 1 \\ 5 & -3 & 1 & -2 \\ -1 & 2 & 0 & 1\end{bmatrix}\).
 \end{problem}
 \begin{solution}
-$-1$.
+\(-1\).
 \end{solution}
 
 \begin{problem}{G2}
