Fix typos in P2

--- a/tex/modules/7-P/sections/2.tex
+++ b/tex/modules/7-P/sections/2.tex
@@ -42,7 +42,7 @@ represents a link from one page to another.
 
 Based on how these pages link to each other,
 write a list of the 7 webpages in order from
-most imporant to least important.
+most imptorant to least important.
 \end{activity}
 
 \begin{observation}
@@ -149,7 +149,7 @@ By writing this linear system in terms of matrix multiplication, we obtain the
 \) and page rank vector
 \(\vect{x}=\begin{bmatrix} x_1 \\ x_2 \\ x_3 \end{bmatrix}\).
 
-Thus, computing the imporance of pages on a network is equivalent to solving
+Thus, computing the importance of pages on a network is equivalent to solving
 the matrix equation \(A\vec{x}=1\vec{x}\).
 
 \end{observation}
