--- a/tex/modules/7-P/sections/4.tex
+++ b/tex/modules/7-P/sections/4.tex
@@ -117,7 +117,7 @@ This process may be done all at once by converting the entire message into a mat
 \equiv
 \begin{bmatrix}18&1\\17&23&\dots\\2&23\end{bmatrix}
 \equiv
-\text{\texttt{RPB AVV ...}}
+\text{\texttt{RQB AVV ...}}
 \]
 \end{observation}
 
@@ -138,7 +138,7 @@ using the encoding matrix \(A=\begin{bmatrix}3&-2&-3\\-2&3&0\\-1&0&2\end{bmatrix
 \equiv
 \begin{bmatrix}18&1\\17&23&\dots\\2&23\end{bmatrix}
 \equiv
-\text{\texttt{RPB AWW ESK ILY JYF UUI}}
+\text{\texttt{RQB AWW ESI ILY FYF UUI}}
 \]
 \end{activity}
 
@@ -146,7 +146,7 @@ using the encoding matrix \(A=\begin{bmatrix}3&-2&-3\\-2&3&0\\-1&0&2\end{bmatrix
 Reverse this process by using the decoding matrix,
 \(A^{-1}=\begin{bmatrix}6&4&9\\4&3&6\\3&2&5\end{bmatrix}\).
 \[
-\text{\texttt{RPB AWW ESK ILY JYF UUI}}
+\text{\texttt{RQB AWW ESI ILY FYF UUI}}
 \equiv
 \begin{bmatrix}18&1\\17&23&\dots\\2&23\end{bmatrix}
 \]
