--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -747,7 +747,18 @@ A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
 \end{problem}
 \begin{solution}
 \begin{enumerate}
-\item \(R= \begin{bmatrix} 1 & 0 & 0 \\ -4 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\)
+\item 
+\(
+  I
+=
+  \begin{bmatrix}1&0&0\\0&1&0\\0&0&1\end{bmatrix}
+\sim
+  \begin{bmatrix} 1 & 0 & 0 \\ 0-4(1) & 1-4(0) & 0-4(0) \\ 0 & 0 & 1 \end{bmatrix}
+=
+  \begin{bmatrix} 1 & 0 & 0 \\ -4 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}
+=
+  R
+\)
 \item \(\det (RC) = \det(R) \det(C) = (1)(12)=12\).
 \end{enumerate}
 \end{solution}
