revamp standards for summer

--- a/tex/modules/2-V/standards.tex
+++ b/tex/modules/2-V/standards.tex
@@ -1,10 +1,7 @@
 \moduleQuestion{What is a vector space?}
 \begin{moduleStandards}
-  \standard{Vector property verification}{VecPrp}{
-    show why an example satisfies a given vector space property, but does not satisfy another given property.
-  }
-  \standard{Vector space identification}{VecId}{
-    list the eight defining properties of a vector space, infer which of these properties a given example satisfies, and thus determine if the example is a vector space.
+  \standard{Vector spaces}{VecSp}{
+    explain why a given set with defined addition and scalar multiplication does satisfy a given vector space property, but nonetheless isn’t a vector space.
   }
   \standard{Linear combinations}{LinCmb}{
     determine if a Euclidean vector can be written as a linear combination of a given set of Euclidean vectors.
@@ -14,5 +11,25 @@
   }
   \standard{Subspaces}{Subsp}{
     determine if a subset of \(\IR^n\) is a subspace or not.
+  }
+  \standard{Linear independence}{LinInd}{
+    determine if a set of Euclidean vectors is linearly dependent or
+    independent.
+  }
+  \standard{Basis verification}{BasVer}{
+    determine if a set of Euclidean vectors is a basis of \(\IR^n\).
+  }
+  \standard{Basis computation}{BasCmp}{
+    compute a basis for the subspace spanned by a given set of Euclidean
+    vectors.
+  }
+  \standard{Dimension}{Dim}{
+    compute the dimension of a subspace of \(\IR^n\).
+  }
+  \standard{Abstract vector spaces}{AbsVec}{
+    compute a basis for the subspace spanned by a given set of polynomials or matrices.
+  }
+  \standard{Basis of solution space}{BasSol}{
+    find a basis for the solution set of a homogeneous system of equations.
   }
 \end{moduleStandards}
