--- a/tex/modules/5-M/standards.tex
+++ b/tex/modules/5-M/standards.tex
@@ -9,13 +9,7 @@
   \standard{Matrix inverses}{InvCmp}{
     compute the inverse matrix of an invertible matrix.
   }
+  \standard{Row operations as multiplication}{RowOpMult}{
+    describe the row reduction of a matrix as matrix multiplication.
+  }
 \end{moduleStandards}
-%
-%
-% \moduleQuestion{How can we understand linear maps geometrically?}
-% \begin{standardsList}}
-%   \standard{Row operations}{Foo}{  represent a row operation as matrix multiplication, and compute how the operation affects the determinant.}
-%   \standard{Determinants}{Foo}{ compute the determinant of a square matrix.}
-%   \standard{Eigenvalues}{Foo}{ find the eigenvalues of a $2\times 2$ matrix.}
-%   \standard{Eigenvectors}{Foo}{ find a basis for the eigenspace of a square matrix associated with a given eigenvalue.
-% \end{standardsList}
