--- a/tex/modules/6-G/standards.tex
+++ b/tex/modules/6-G/standards.tex
@@ -1,15 +1,16 @@
 \moduleQuestion{How can we understand linear maps geometrically?}
 \begin{moduleStandards}
   \standard{Row operations}{RowOp}{
-    represent a row operation as matrix multiplication, and compute how the operation affects the determinant.
+    describe how a row operation affects the determinant of a matrix.
   }
   \standard{Determinants}{Det}{
-    compute the determinant of a square matrix.
+    compute the determinant of a \(4\times 4\) matrix.
   }
   \standard{Eigenvalues}{EigVal}{
     find the eigenvalues of a \(2\times 2\) matrix.
   }
   \standard{Eigenvectors}{EigVec}{
-    find a basis for the eigenspace of a square matrix associated with a given eigenvalue.
+    find a basis for the eigenspace of a \(4\times 4\)  
+    matrix associated with a given eigenvalue.
   }
 \end{moduleStandards}
