add first few M4 exercises

--- a/tex/exercise-library.tex
+++ b/tex/exercise-library.tex
@@ -101,6 +101,8 @@
 \input{modules/5-M/exercises/M2.tex} \newpage
 \startStandard{M3}
 \input{modules/5-M/exercises/M3.tex} \newpage
+\startStandard{M4}
+\input{modules/5-M/exercises/M4.tex} \newpage
 
 
 \startModule{G}
