--- a/tex/modules/6-G/exercises/G4.tex
+++ b/tex/modules/6-G/exercises/G4.tex
@@ -1,95 +1,81 @@
 \begin{problem}{G4}
-Find a basis of the eigenspace associated to the eigenvalue $-1$ in the matrix $\begin{bmatrix} 4 & -2 & -1 \\ 15 & -7 & -3 \\ -5 & 2 & 0 \end{bmatrix}$. 
+Find a basis of the eigenspace associated to the eigenvalue \(-1\) for the matrix 
+\(\begin{bmatrix} 4 & -2 & -1 & 1 \\ 15 & -7 & -3 & 1 \\ -5 & 2 & 0 & 1 \\ 10 & -4 & -2 & 0 \end{bmatrix}\). 
 \end{problem}
 \begin{solution}
-$$\RREF\left(A+I\right) = \begin{bmatrix} 1 & - \frac{2}{5} & -\frac{1}{5} \\ 0 & 0 & 0 \\ 0 & 0 & 0 \end{bmatrix}$$
-So a basis for the eigenspace is given by \(\setList{\begin{bmatrix} \frac{2}{5} \\1 \\  0 \end{bmatrix},\begin{bmatrix} \frac{1}{5} \\ 0 \\ 1 \end{bmatrix}}\).
+A basis for the eigenspace is given by \(\setList{\begin{bmatrix} \frac{2}{5} \\1 \\  0\\0 \end{bmatrix},\begin{bmatrix} \frac{1}{5} \\ 0 \\ 1\\0 \end{bmatrix}}\).
 \end{solution}
 
 \begin{problem}{G4}
-Find a basis of the eigenspace associated to the eigenvalue $1$ in the matrix $A=\begin{bmatrix} -3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3 \end{bmatrix}$
+Find a basis of the eigenspace associated to the eigenvalue \(1\) for the matrix 
+\(A=\begin{bmatrix} -3 & 1 & 0 & 0 \\ -8 & 2 & 0 & -1 \\ 0 & 2 & 1 & 2 \\ 4 & 1 & 0 & 3 \end{bmatrix}\).
 \end{problem}
 \begin{solution}
-A basis for the eigenspace is given by $\setList{\begin{bmatrix} -\frac{1}{4} \\ -1 \\ 1 \end{bmatrix}}$.
+A basis for the eigenspace is given by $\setList{\begin{bmatrix}0\\0\\1\\0\end{bmatrix},\begin{bmatrix} -\frac{1}{4} \\ -1 \\ 0\\1 \end{bmatrix}}$.
 \end{solution}
 
 \begin{problem}{G4}
-Find a basis of the eigenspace associated to the eigenvalue $1$ in the matrix $A=\begin{bmatrix} 8 & -3 & -1 \\ 21 & -8 & -3 \\ -7 & 3  & 2 \end{bmatrix}$
+Find a basis of the eigenspace associated to the eigenvalue \(1\) for the matrix 
+\(A=\begin{bmatrix} 1&0&0&0\\1&8 & -3 & -1 \\ 2&21 & -8 & -3 \\ 3&-7 & 3  & 2 \end{bmatrix}\).
 \end{problem}
 \begin{solution}
-A basis for the eigenspace is given by $\setList{\begin{bmatrix} \frac{3}{7} \\ 1 \\ 0 \end{bmatrix},\begin{bmatrix}\frac{1}{7} \\ 0 \\ 1 \end{bmatrix}}$.
+A basis for the eigenspace is given by $\setList{\begin{bmatrix} 0\\\frac{3}{7} \\ 1 \\ 0 \end{bmatrix},\begin{bmatrix}0\\\frac{1}{7} \\ 0 \\ 1 \end{bmatrix}}$.
 \end{solution}
 
 \begin{problem}{G4}
-Find a basis of the eigenspace associated to the eigenvalue $-1$ in the matrix $A=\begin{bmatrix}9 & -3 & 2 \\ 19 & -6 & 5 \\ -11 & 4 & -2 \end{bmatrix}$
+Find a basis of the eigenspace associated to the eigenvalue \(1\) for the matrix 
+\(A=\begin{bmatrix}9 & -3 & -5 & 2 \\ 19 & -6 & -12 & 5 \\ 1 & 1 & -1 & 3 \\ -11 & 4 & 7 & -2 \end{bmatrix}\).
 \end{problem}
 \begin{solution}
-A basis for the eigenspace is given by $\setList{\begin{bmatrix} -\frac{5}{7} \\ - \frac{12}{7} \\ 1 \end{bmatrix}}$.
+A basis for the eigenspace is given by $\setList{\begin{bmatrix}1 \\ 1 \\ 1 \\ 0\end{bmatrix},\begin{bmatrix} -1 \\ -2 \\ 0 \\ 1 \end{bmatrix}}$.
 \end{solution}
 
 \begin{problem}{G4}
-Find a basis of the eigenspace associated to the eigenvalue $1$ in the matrix $A=\begin{bmatrix}9 & -3 & 2 \\ 19 & -6 & 5 \\ -11 & 4 & -2 \end{bmatrix}$
-\end{problem}
-\begin{solution}
-A basis for the eigenspace is given by $\setList{\begin{bmatrix} -1 \\ -2 \\ 1 \end{bmatrix}}$.
-\end{solution}
-
-\begin{problem}{G4}
-Find a basis of the eigenspace associated to the eigenvalue $2$ in the matrix $A=\begin{bmatrix} 0 & 1 & 0 & 0 \\ -4 & 4 & 0 & 0 \\ 11 & -6 & 1 & -1 \\ -9 & 5 & 1 & 3 \end{bmatrix}$.
+Find a basis of the eigenspace associated to the eigenvalue \(2\) for the matrix 
+\(A=\begin{bmatrix} 0 & 1 & 0 & 0 \\ -4 & 4 & 0 & 0 \\ 11 & -6 & 1 & -1 \\ -9 & 5 & 1 & 3 \end{bmatrix}\).
 \end{problem}
 \begin{solution}
 A basis for the eigenspace is given by $\setList{\begin{bmatrix} -1 \\ -2 \\ 1 \\ 0 \end{bmatrix},\begin{bmatrix} -1 \\ -2 \\ 0 \\ 1 \end{bmatrix}}$.
 \end{solution}
 
 \begin{problem}{G4}
-Find a basis of the eigenspace associated to the eigenvalue $2$ in the matrix $A=\begin{bmatrix} 2 & 0 & 0 & 0 \\ 0 & 2 & 0 & 0 \\ -1 & 0 & 1 & -1 \\ 1 & 0 & 1 & 3 \end{bmatrix}$.
+Find a basis of the eigenspace associated to the eigenvalue $2$ for the matrix $A=\begin{bmatrix} 2 & 0 & 0 & 0 \\ 0 & 2 & 0 & 0 \\ -1 & 0 & 1 & -1 \\ 1 & 0 & 1 & 3 \end{bmatrix}$.
 \end{problem}
 \begin{solution}
 A basis for the eigenspace is given by $\setList{\begin{bmatrix} -1 \\ 0 \\ 1 \\ 0 \end{bmatrix}, \begin{bmatrix} -1 \\ 0 \\ 0 \\ 1 \end{bmatrix},\begin{bmatrix} 0 \\ 1 \\ 0 \\ 0 \end{bmatrix}}$.
 \end{solution}
 
 \begin{problem}{G4}
-Find a basis of the eigenspace associated to the eigenvalue $2$ in the matrix $A=\begin{bmatrix}0 & -2 & -1 & 0 \\ -4 & -2 & -2 & 0 \\ 14 & 12 & 10 & 2 \\ -13 & -10 & -8 & -1 \end{bmatrix}$.
+Find a basis of the eigenspace associated to the eigenvalue $2$ for the matrix $A=\begin{bmatrix}0 & -2 & -1 & 0 \\ -4 & -2 & -2 & 0 \\ 14 & 12 & 10 & 2 \\ -13 & -10 & -8 & -1 \end{bmatrix}$.
 \end{problem}
 \begin{solution}
 A basis for the eigenspace is given by $\setList{\begin{bmatrix} -1 \\ \frac{1}{2} \\ 1 \\ 0 \end{bmatrix},\begin{bmatrix} -1 \\ 1 \\ 0 \\ 1 \end{bmatrix}}$.
 \end{solution}
 
 \begin{problem}{G4}
-Find a basis of the eigenspace associated to the eigenvalue $3$ in the matrix $A=\begin{bmatrix}1 & -2 & -1 & 0 \\ -4 & -1 & -2 & 0 \\ 14 & 12 & 11 & 2 \\ -14 & -10 & -9 & -1\end{bmatrix}$.
+Find a basis of the eigenspace associated to the eigenvalue $3$ for the matrix $A=\begin{bmatrix}1 & -2 & -1 & 0 \\ -4 & -1 & -2 & 0 \\ 14 & 12 & 11 & 2 \\ -14 & -10 & -9 & -1\end{bmatrix}$.
 \end{problem}
 \begin{solution}
 A basis for the eigenspace is given by $\setList{\begin{bmatrix} -1 \\ \frac{1}{2} \\ 1 \\ 0 \end{bmatrix},\begin{bmatrix} -1 \\ 1 \\ 0 \\ 1 \end{bmatrix}}$.
 \end{solution}
 
 
-\begin{problem}{G4}
-Find a basis of the eigenspace associated to the eigenvalue $2$ in the matrix $A=\begin{bmatrix}8 & -3 & 2 \\ 15 & -5 & 5 \\ -3 & 2 & 1\end{bmatrix}$
-\end{problem}
-\begin{solution}
-A basis for the eigenspace is given by $\setList{\begin{bmatrix} -\frac{1}{3} \\ 0 \\ 1 \end{bmatrix}}$.
-\end{solution}
 
 \begin{problem}{G4}
-Find a basis of the eigenspace associated to the eigenvalue $-2$ in the matrix $A=\begin{bmatrix}8 & -3 & 2 \\ 23 & -9 & 5 \\ -7 & 2 & -3\end{bmatrix}$
+Find a basis of the eigenspace associated to the eigenvalue \(-2\) for the matrix 
+\(A=\begin{bmatrix}0 & 0 & 0 & 2 \\ 1 & 2 & -3 & 3 \\ 1 & 8 & -9 & 6 \\ 1 & 8 & -7 & 4\end{bmatrix}\).
 \end{problem}
 \begin{solution}
-A basis for the eigenspace is given by $\setList{\begin{bmatrix} 1 \\ 4 \\ 1 \end{bmatrix}}$.
-\end{solution}
-
-\begin{problem}{G4}
-Find a basis of the eigenspace associated to the eigenvalue $-2$ in the matrix $A=\begin{bmatrix}2 & -3 & 2 \\ 8 & -9 & 5 \\ 8 & -7 & 3\end{bmatrix}$
-\end{problem}
-\begin{solution}
-A basis for the eigenspace is given by $\setList{\begin{bmatrix} \frac{1}{4} \\ 1 \\ 1 \end{bmatrix}}$.
+A basis for the eigenspace is given by \(\setList{\begin{bmatrix} -1 \\ \frac{1}{4} \\ 1 \\ 1 \end{bmatrix}}\).
 \end{solution}
 
 
 \begin{problem}{G4}
-Find a basis of the eigenspace associated to the eigenvalue $2$ in the matrix $\begin{bmatrix} -1 & 1 & 0 \\ -9 & 5 & 0 \\ 15 & -5 & 2 \end{bmatrix}$.
+Find a basis of the eigenspace associated to the eigenvalue \(2\) for the matrix 
+\(\begin{bmatrix} -1 & 0 & 1 & 0 \\ 6 & 2 & -2 & 0 \\ -9 & 0 & 5 & 0 \\ 15 & 0 & -5 & 2 \end{bmatrix}\).
 \end{problem}
 
 \begin{solution}
-$$\RREF(B-2I)=\RREF\left(\begin{bmatrix} -3 & 1 & 0 \\ -9 & 3 & 0 \\ 15 & - 5 & 0 \end{bmatrix} \right) = \begin{bmatrix} 1 & -\frac{1}{3} & 0 \\ 0 & 0 & 0 \\ 0 & 0 & 0 \end{bmatrix}$$
-A basis for the eigenspace is given by \(\setList{\begin{bmatrix} 1 \\ 3 \\ 0 \end{bmatrix}, \begin{bmatrix} 0 \\ 0 \\ 1\end{bmatrix}}\).
+A basis for the eigenspace is given by 
+\(\setList{\begin{bmatrix}0 \\ 1 \\ 0 \\ 0\end{bmatrix},\begin{bmatrix} \frac{1}{3} \\ 0 \\ 1 \\ 0 \end{bmatrix}, \begin{bmatrix} 0 \\ 0 \\ 0 \\ 1\end{bmatrix}}\).
 \end{solution}
