--- a/tex/modules/2-V/standards.tex
+++ b/tex/modules/2-V/standards.tex
@@ -1,7 +1,7 @@
 \moduleQuestion{What is a vector space?}
 \begin{moduleStandards}
   \standard{Vector spaces}{VecSp}{
-    explain why a given set with defined addition and scalar multiplication does satisfy a given vector space property, but nonetheless isn’t a vector space.
+    explain why a given set with defined addition and scalar multiplication does satisfy a given vector space property, but nonetheless isn't a vector space.
   }
   \standard{Linear combinations}{LinCmb}{
     determine if a Euclidean vector can be written as a linear combination of a given set of Euclidean vectors.
