update module slides to have correct title and authors

--- a/tex/slides/slides-5-M.tex
+++ b/tex/slides/slides-5-M.tex
@@ -2,8 +2,8 @@
 
 \usepackage{course-slides}
 
-\title{Module M}
-\author{Math 237}
+\title{Linear Algebra Module M}
+\author{Clontz \& Lewis}
 
 \begin{document}
 
