--- a/tex/slides/slides-6-G.tex
+++ b/tex/slides/slides-6-G.tex
@@ -2,8 +2,8 @@
 
 \usepackage{course-slides}
 
-\title{Module G}
-\author{Math 237}
+\title{Linear Algebra Module G}
+\author{Clontz \& Lewis}
 
 \begin{document}
 
