--- a/tex/slides/slides-7-P.tex
+++ b/tex/slides/slides-7-P.tex
@@ -2,8 +2,8 @@
 
 \usepackage{course-slides}
 
-\title{Module P}
-\author{Math 237}
+\title{Linear Algebra Module P}
+\author{Clontz \& Lewis}
 
 \begin{document}
 
