--- a/tex/slides/slides-1-E.tex
+++ b/tex/slides/slides-1-E.tex
@@ -2,8 +2,8 @@
 
 \usepackage{course-slides}
 
-\title{Module E}
-\author{Math 237}
+\title{Linear Algebra Module E}
+\author{Clontz \& Lewis}
 
 \begin{document}
 
