--- a/tex/slides/slides-2-V.tex
+++ b/tex/slides/slides-2-V.tex
@@ -2,8 +2,8 @@
 
 \usepackage{course-slides}
 
-\title{Module V}
-\author{Math 237}
+\title{Linear Algebra Module V}
+\author{Clontz \& Lewis}
 
 \begin{document}
 
