--- a/tex/slides/slides-4-A.tex
+++ b/tex/slides/slides-4-A.tex
@@ -2,8 +2,8 @@
 
 \usepackage{course-slides}
 
-\title{Module A}
-\author{Math 237}
+\title{Linear Algebra Module A}
+\author{Clontz \& Lewis}
 
 \begin{document}
 
