--- a/tex/modules/2-V/index.tex
+++ b/tex/modules/2-V/index.tex
@@ -1,5 +1,5 @@
 \begin{module}{V}{Vector Spaces}
-
+ 
 \input{modules/2-V/standards.tex}
 \input{modules/2-V/readiness/outcomes.tex}
 \input{modules/2-V/readiness/resources.tex}
@@ -9,5 +9,8 @@
 \input{modules/2-V/sections/2.tex}
 \input{modules/2-V/sections/3.tex}
 \input{modules/2-V/sections/4.tex}
+\input{modules/2-V/sections/5.tex}
+\input{modules/2-V/sections/6.tex}
+\input{modules/2-V/sections/7.tex}
 
 \end{module}
