--- a/tex/homework.tex
+++ b/tex/homework.tex
@@ -23,47 +23,47 @@ For each standard, I list in \closeExamples{bold} practice problems that will mo
 %  \standards{E4:} \S 1.2
 %    \closeExamples{20,25}
 
-  \standards{V1,V2:} \S 7.1
+  \standards{V1:} \S 7.1
     \otherExamples{1-12}
 
-  \standards{V3:} \S 2.1
+  \standards{V2:} \S 2.1
     \closeExamples{31-36}
     | \S 2.2
     \closeExamples{7-12}
 
-  \standards{V4:} \S 2.2
+  \standards{V3:} \S 2.2
     \closeExamples{21-28}
 
-  \standards{V5:} \S 4.1
+  \standards{V4:} \S 4.1
     \closeExamples{1-16},
     \otherExamples{17-20}
     % | \S 7.1
     % \otherExamples{13-16},
     % \otherExamples{18-25}
 
-  \standards{S1:} \S 2.3
+  \standards{V5:} \S 2.3
     \closeExamples{1-12},
     \otherExamples{19-28}
     % | \S 7.2
     % \otherExamples{17-26}
 
-  \standards{S2:}
-    \closeExamples{\textbf{V3} and \textbf{S1} exercises}
+  \standards{V6:}
+    \closeExamples{\textbf{V3} and \textbf{V5} exercises}
     | \S 4.2
     \otherExamples{1-4},
     \otherExamples{23-28}
     % | \S 7.3
     % \otherExamples{1-12}
 
-  \standards{S3,S4:} \S 4.2
+  \standards{V7,V8:} \S 4.2
     \closeExamples{5-16},
     \otherExamples{17-22}
     % | \S 7.3
     % \otherExamples{13-15,18}
 
-   \standards{S5:} \S 7.1 \closeExamples{13-32} | \S 7.2 \closeExamples{1-26} | \S 7.3 \closeExamples{7-20,25-26}
+   \standards{V9:} \S 7.3 \otherExamples{7-20,25-26}
 
-   \standards{S6:} \S 1.2 \closeExamples{20,25}
+   \standards{V10:} \S 1.2 \closeExamples{20,25}
 
   \standards{A1:} \S 3.1 \closeExamples{13-20} | \S 9.3 \closeExamples{19-21}, \otherExamples{22-30}
   \standards{A2:} \S 3.1 \closeExamples{13-20} | \S 9.1 \closeExamples{5-22}
