update homework list

--- a/tex/homework.tex
+++ b/tex/homework.tex
@@ -71,6 +71,7 @@ For each standard, I list in \closeExamples{bold} practice problems that will mo
   \standards{A4:} \S 3.1 \otherExamples{5-8} | \S 9.1 \closeExamples{23-26}
   \standards{M1:} \S 3.2 \closeExamples{1-6}, \otherExamples{7-36}
   \standards{M2,M3:} \S 3.3 \closeExamples{1-16}, \otherExamples{17-28}
+  \standards{M4:} N/A
   \standards{G1:} \S 5.2 \closeExamples{7-18}
   \standards{G2:} \S 5.1 \closeExamples{11-18}, \otherExamples{19-40,45-52} | \S 5.2 \otherExamples{7-18}
   \standards{G3:} \S 6.1 \otherExamples{7-10}, \closeExamples{21-30}
