--- a/tex/modules/1-E/sections/1.tex
+++ b/tex/modules/1-E/sections/1.tex
@@ -96,22 +96,20 @@
     \end{alignat*}
   \end{multicols}
 
-  Therefore these augmented matrices are equivalent:
+  Therefore these augmented matrices are equivalent,
+  which we denote with \(\sim\):
 
-  \begin{multicols}{2}\noindent
     \[
       \begin{bmatrix}[cc|c]
         3 & -2 & 1\\
         1 &  4 & 5\\
       \end{bmatrix}
-    \]
-    \[
+    \sim
       \begin{bmatrix}[cc|c]
         3 & -2 & 1\\
         4 &  2 & 6\\
       \end{bmatrix}
     \]
-  \end{multicols}
 \end{definition}
 
 \begin{activity}{10}
@@ -141,18 +139,25 @@
   The following \term{row operations} produce equivalent
   augmented matrices:
   \begin{enumerate}
-    \item Swap two rows.
-    % \begin{itemize}
-    %   \item (swap the order of two equations in the system)
-    % \end{itemize}
-    \item Multiply a row by a nonzero constant.
-    % \begin{itemize}
-    %   \item (multiply both sides of an equation by a nonzero constant)
-    % \end{itemize}
-    \item Add a constant multiple of one row to another row.
-    % \begin{itemize}
-    %   \item (add a multiple of one equation to another)
-    % \end{itemize}
+    \item Swap two rows, for example, \(R_1\leftrightarrow R_2\):
+    \[
+      \begin{bmatrix}[cc|c] 1 & 2 & 3 \\ 4 & 5 & 6 \end{bmatrix}
+    \sim
+      \begin{bmatrix}[cc|c] 4 & 5 & 6 \\ 1 & 2 & 3 \end{bmatrix}
+    \]
+    \item Multiply a row by a nonzero constant, for example, \(2R_1\rightarrow R_1\):
+    \[
+      \begin{bmatrix}[cc|c] 1 & 2 & 3 \\ 4 & 5 & 6 \end{bmatrix}
+    \sim
+      \begin{bmatrix}[cc|c] 2(1) & 2(2) & 2(3) \\ 4 & 5 & 6 \end{bmatrix}
+    \]
+    \item Add a constant multiple of one row to another row,
+          for example, \(R_2-4R_1\rightarrow R_2\):
+    \[
+      \begin{bmatrix}[cc|c] 1 & 2 & 3 \\ 4 & 5 & 6 \end{bmatrix}
+    \sim
+      \begin{bmatrix}[cc|c] 1 & 2 & 3 \\ 4-4(1) & 5-4(2) & 6-4(3) \end{bmatrix}
+    \]
   \end{enumerate}
   Whenever two matrices \(A,B\) are equivalent (so whenever we do any of
   these operations), we write \(A\sim B\).
@@ -264,16 +269,16 @@ Circle the leading terms in each example, and label it as RREF or not RREF.
 
 \begin{remark}
 It is important to understand the \term{Gauss-Jordan elimination} algorithm
-that converts a matrix into reduced row echelon form.
+that converts a matrix (augmented or not) into reduced row echelon form.
 
-\vspace{0.5in}
+\vspace{1em}
 
 A video outlining how to perform the Gauss-Jordan Elimination algorithm
 by hand is available at \url{https://youtu.be/Cq0Nxk2dhhU}.
 Practicing several exercises outside of class using this method is
 recommended.
 
-\vspace{0.5in}
+\vspace{1em}
 
 In the next section, we will learn to use technology to perform this
 operation for us, as will be expected when applying row-reduced
