--- a/tex/modules/1-E/sections/2.tex
+++ b/tex/modules/1-E/sections/2.tex
@@ -8,30 +8,33 @@
 Free browser-based technologies for mathematical computation
 are available online.
 \begin{itemize}
-\item Go to \url{http://cocalc.com} and create an account.
-\item Create a project titled ``Linear Algebra Team X'' with your appropriate
-      team number.  Add all team members as collaborators.
-\item Open the project and click on ``New''
-\item Give it an appropriate name such as ``Class E.2 workbook''.  Make a new
-      Jupyter notebook.
-\item Click on ``Kernel'' and make sure ``Octave'' is selected.
-\item Type \texttt{A=[1 3 4 ; 2 5 7]} and press \texttt{Shift+Enter}
+\item Go to \url{https://octave-online.net}.
+\item Type \texttt{A=sym([1 3 4 ; 2 5 7])} and press \texttt{Enter}
       to store the matrix
-      \(\begin{bmatrix} 1 & 3 & 4 \\ 2 & 5 & 7\end{bmatrix}\)
-      in the variable $A$.
-\item Type \texttt{rref(A)} and press \texttt{Shift+Enter}
-      to compute the reduced row echelon form of $A$.
+      \(\begin{bmatrix} 1 & 3 & 2 \\ 2 & -9 & -1 \end{bmatrix}\)
+      in the variable \(A\).
+  \begin{itemize}
+    \item The symbolic form is used to calculate precise answers 
+          rather than floating-point approximations.
+    \item The vertical bar in an augmented matrix does not affect
+          row operations, so it does not need to be entered into
+          a calculator.
+  \end{itemize}
+\item Type \texttt{rref(A)} and press \texttt{Enter}
+      to compute the reduced row echelon form of \(A\).
 \end{itemize}
 \end{activity}
 
 \begin{remark}
-If you need to find the reduced row echelon form of a matrix during class, you
-are encouraged to use CoCalc's Octave interpreter.
+We will frequently need to know the reduced row echelon form of matrices 
+during class, so feel free to use Octave-Online.net to compute RREF
+efficiently.
 
-\vspace{0.2in}
+\vspace{1em}
 
-You can change a cell from ``Code'' to ``Markdown'' or ``Raw'' to put comments
-around your calculations such as Activity numbers.
+You may alternatively use the calculator you will use during assessments.
+Be sure to use fractions mode to compute exact solutions rather
+than floating-point approximations. 
 \end{remark}
 
 \begin{activity}{10}
@@ -44,14 +47,32 @@ Consider the system of equations.
    		\end{alignedat}
 \]
 
-Convert this to an augmented matrix and use CoCalc to compute its
-reduced row echelon form. Write these on your whiteboard, and use
-them to write a simpler yet equivalent linear system of equations.
-Then find its solution set.
+\begin{subactivity}
+Convert this to an augmented matrix and use technology to compute its
+reduced row echelon form:
+\[
+  \RREF
+  \begin{bmatrix}[ccc|c]
+    \unknown&\unknown&\unknown&\unknown\\ 
+    \unknown&\unknown&\unknown&\unknown\\ 
+    \unknown&\unknown&\unknown&\unknown\\ 
+  \end{bmatrix}
+=
+  \begin{bmatrix}[ccc|c]
+    \unknown&\unknown&\unknown&\unknown\\ 
+    \unknown&\unknown&\unknown&\unknown\\ 
+    \unknown&\unknown&\unknown&\unknown\\ 
+  \end{bmatrix}
+\]
+\end{subactivity}
+\begin{subactivity}
+Use the \(\RREF\) matrix to write a linear system equivalent
+to the original system. Then find its solution set.
+\end{subactivity}
 \end{activity}
 
 \begin{activity}{10}
-Consider our system of equations from above.
+Consider the system of equations.
  \[
 		\begin{alignedat}{4}
    		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
@@ -60,10 +81,28 @@ Consider our system of equations from above.
    		\end{alignedat}
 \]
 
-Convert this to an augmented matrix and use CoCalc to compute its
-reduced row echelon form. Write these on your whiteboard, and use
-them to write a simpler yet equivalent linear system of equations.
-Then find its solution set.
+\begin{subactivity}
+Convert this to an augmented matrix and use technology to compute its
+reduced row echelon form:
+\[
+  \RREF
+  \begin{bmatrix}[ccc|c]
+    \unknown&\unknown&\unknown&\unknown\\ 
+    \unknown&\unknown&\unknown&\unknown\\ 
+    \unknown&\unknown&\unknown&\unknown\\ 
+  \end{bmatrix}
+=
+  \begin{bmatrix}[ccc|c]
+    \unknown&\unknown&\unknown&\unknown\\ 
+    \unknown&\unknown&\unknown&\unknown\\ 
+    \unknown&\unknown&\unknown&\unknown\\ 
+  \end{bmatrix}
+\]
+\end{subactivity}
+\begin{subactivity}
+Use the \(\RREF\) matrix to write a linear system equivalent
+to the original system. Then find its solution set.
+\end{subactivity}
 \end{activity}
 
 \begin{activity}{10}
@@ -74,19 +113,19 @@ Then find its solution set.
   	\end{alignat*}
   \begin{subactivity}
     Find its corresponding augmented matrix \(A\) and
-    use CoCalc to find \(\RREF(A)\).
+    use technology to find \(\RREF(A)\).
   \end{subactivity}
   \begin{subactivity}
-    How many solutions does the corresponding linear system have?
+    How many solutions do these linear systems have?
   \end{subactivity}
 \end{activity}
 
 \begin{activity}{10}
 Consider the simple linear system equivalent to the system
-from the previous problem:
+from the previous activity:
 	\begin{alignat*}{3}
 		x_1 &+ 2x_2 & &= 4\\
-	     	 & &x_3 &= -1
+	     	 & &\phantom{+}x_3 &= -1
 	\end{alignat*}
 \begin{subactivity}
 Let \(x_1=a\) and write the solution set in the form
@@ -138,8 +177,8 @@ The remaining variables are called \term{free variables} (\(x_2\) below).
   \end{bmatrix}
 \]
 
-To efficiently solve a system in RREF form, we may assign letters to free
-variables and solve for the bound variables.
+To efficiently solve a system in RREF form, assign letters to the free
+variables, and then solve for the bound variables.
 \end{definition}
 
 \begin{activity}{10}
@@ -195,7 +234,7 @@ infintely many solutions.
             a\in\IR
           }
         \)
-  \item \textbf{Inconsistent}: \(\emptyset\)
+  \item \textbf{Inconsistent}: \(\emptyset\) or \(\{\}\)
   \end{itemize}
 \end{remark}
 
