--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -683,6 +683,99 @@ So the inverse is \(\begin{bmatrix}  1 & 2 & -11 & 32 \\ 0 & -1 & 4 & -14 \\  0 
 \end{solution}
 
 
+\begin{problem}{M4}
+Consider the two row operations 
+\(R_2-3R_1\to R_2\) and \(2R_2\to R_2\)
+applied as follows to show \(A\sim B\):
+\begin{align*}
+A
+  =
+\begin{bmatrix}
+1&2&3\\
+4&5&6\\
+7&8&9
+\end{bmatrix}
+  &\sim
+\begin{bmatrix}
+1&2&3\\
+4-3(1)&5-3(2)&6-3(3)\\
+7&8&9
+\end{bmatrix}
+  =
+\begin{bmatrix}
+1&2&3\\
+1&-1&-3\\
+7&8&9
+\end{bmatrix}
+  \\&\sim
+\begin{bmatrix}
+1&2&3\\
+2(1)&2(-1)&2(-3)\\
+7&8&9
+\end{bmatrix}
+  =
+\begin{bmatrix}
+1&2&3\\
+2&-2&-6\\
+7&8&9
+\end{bmatrix}
+  = 
+B
+\end{align*}
+Express these row operations as matrix multiplication
+by expressing \(B\) as the product of two matrices and \(A\).
+\end{problem}
+\begin{solution}
+Each row operation may be applied to the identity matrix \(I\):
+\[
+I
+  =
+\begin{bmatrix}
+1&0&0\\
+0&1&0\\
+0&0&1
+\end{bmatrix}
+\sim
+\begin{bmatrix}
+1&0&0\\
+-3&1&0\\
+0&0&1
+\end{bmatrix}
+\]
+\[
+I
+  =
+\begin{bmatrix}
+1&0&0\\
+0&1&0\\
+0&0&1
+\end{bmatrix}
+\sim
+\begin{bmatrix}
+1&0&0\\
+0&2&0\\
+0&0&1
+\end{bmatrix}
+\]
+and then left-multiplied with \(A\) to obtain the solution:
+\[
+B
+  =
+\begin{bmatrix}
+  1&0&0\\
+  0&2&0\\
+  0&0&1
+\end{bmatrix}
+\begin{bmatrix}
+  1&0&0\\
+  -3&1&0\\
+  0&0&1
+\end{bmatrix}
+A
+\]
+\end{solution}
+
+
 \begin{problem}{G1}
 Consider the row operation \(R_2-4R_1\to R_2\) applied as follows to show
 \(A\sim B\):
@@ -750,8 +843,7 @@ Here is one possible solution, first applying a single row operation,
  \end{align*}
 
 Here is another possible solution, using row and column operations to first reduce
-the determinant to a \(3\times 3\) matrix and then applying the diagonal
-formula taught in calculus courses:
+the determinant to a \(3\times 3\) matrix and then applying a formula:
 \begin{align*}
 \det
   \begin{bmatrix}
